--- a/index.html
+++ b/index.html
@@ -1,86 +1,100 @@
 <!doctype html>
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sommerschule — Jonas Jansen</title>
-  <meta name="description" content="Arbeitsmaterialien der Sommerschule für angewandte Mathematik beim Fraunhofer SCAI." />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Python Academy</title>
   <style>
-    /* einfaches, sauberes styling */
-    body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin:0; color:#111; background:#fff; line-height:1.5; }
-    header { background:#0b6; padding:18px 20px; color:#fff; }
-    nav { display:flex; gap:12px; flex-wrap:wrap; }
-    nav a { color:inherit; text-decoration:none; opacity:.95; }
-    main { max-width:900px; margin:28px auto; padding:0 18px; }
-    h1 { margin-top:0; font-size:1.9rem; }
-    h2 { margin-bottom:6px; font-size:1.2rem; }
-    ul { padding-left:1.1rem; }
-    a.button { display:inline-block; margin:8px 0; padding:8px 12px; border-radius:6px; background:#eee; text-decoration:none; color:#111; }
-    footer { margin-top:48px; padding:18px; border-top:1px solid #eee; color:#666; font-size:0.9rem; text-align:center; }
-    .cols { display:grid; grid-template-columns:1fr 1fr; gap:18px; }
-    @media (max-width:700px) { .cols { grid-template-columns:1fr; } header { text-align:center; } }
+    body {
+      margin: 0;
+      font-family: system-ui, sans-serif;
+      background: white;
+      color: #222;
+    }
+    header {
+      background: white;
+      border-bottom: 1px solid #ddd;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+    .nav-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+      display: flex;
+      align-items: center;
+      height: 70px;
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      color: inherit;
+    }
+    .logo img {
+      height: 50px;
+      width: auto;
+      margin-right: 12px;
+    }
+    .site-name {
+      text-decoration: none;
+      font-size: 1.2rem;
+      font-weight: 500;
+      color: inherit;
+    }
+    nav {
+      margin-left: auto;
+      display: flex;
+      gap: 20px;
+    }
+    nav a {
+      text-decoration: none;
+      color: #222;
+      font-size: 1rem;
+      position: relative;
+    }
+    nav a::after {
+      content: '';
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: black;
+      transition: width 0.3s;
+    }
+    nav a:hover::after {
+      width: 100%;
+    }
+    main {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
   </style>
 </head>
 <body>
-  <header>
-    <div style="max-width:1100px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;">
-      <div>
-        <strong>Jonas Jansen</strong>
-      </div>
-      <nav>
-        <a href="/about">about</a>
-        <a href="/joint-seminar">joint seminar</a>
-        <a href="/teaching">teaching</a>
-        <a href="/publications">publications</a>
-        <a href="/cv">curriculum vitae</a>
-        <a href="/sommerschule">sommerschule (current)</a>
-        <a href="/talks">talks</a>
-      </nav>
-    </div>
-  </header>
 
-  <main>
-    <h1>sommerschule</h1>
-    <p>Arbeitsmaterialien der Sommerschule für angewandte Mathematik beim Fraunhofer SCAI.</p>
+<header>
+  <div class="nav-container">
+    <a href="index.html" class="logo">
+      <img src="logo.png" alt="Logo">
+    </a>
+    <a href="index.html" class="site-name">Python Academy</a>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">Über mich</a>
+      <a href="#services">Leistungen</a>
+      <a href="#contact">Kontakt</a>
+    </nav>
+  </div>
+</header>
 
-    <p><a class="button" href="https://jonas-jansen.github.io/sommerschule/assets/python-libs.zip">Python-Bibliotheken herunterladen</a></p>
+<main>
+  <h1>Willkommen auf meiner Website</h1>
+  <p>Hier kannst du deinen Inhalt einfügen.</p>
+</main>
 
-    <section>
-      <h2>Python</h2>
-      <ul>
-        <li><a href="#">Grundlagen der Programmierung in Python — Zusammenfassung des Materials und Spickzettel</a></li>
-        <li><a href="#">Objektorientierte Programmierung und Klassen — Zusammenfassung und Spickzettel</a></li>
-        <li><a href="#">Wissenschaftliches Programmieren mit Numpy — Zusammenfassung und Spickzettel</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Pythonaufgaben</h2>
-      <ul>
-        <li><a href="#">Aufgaben zur Einführung in Python</a></li>
-        <li><a href="#">Fortgeschrittene Aufgaben</a></li>
-        <li><a href="#">Aufgaben zu Klassen</a></li>
-        <li><a href="#">Projektaufgabe Bildfilter</a></li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Projektarbeiten</h2>
-      <div class="cols">
-        <ul>
-          <li><a href="#">Conway's Spiel des Lebens</a></li>
-          <li><a href="#">Nagel-Schreckenberg-Modell</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">Zelluläre Automaten</a></li>
-          <li><a href="#">Große lineare Gleichungssysteme schnell lösen</a></li>
-        </ul>
-      </div>
-    </section>
-
-    <footer>
-      © Copyright 2025 Jonas Jansen. Powered by Jekyll with al-folio theme. Hosted by GitHub Pages.
-    </footer>
-  </main>
 </body>
 </html>
