--- a/Playground.html
+++ b/Playground.html
@@ -27,5 +27,33 @@
   <h1>Willkommen auf meiner Website</h1>
   <p>Hier kannst du deinen Inhalt einfügen.</p>
 </main>
+
+<div class="container">
+
+  <!-- Erstes Spiel: Text links, Spiel rechts -->
+  <div class="game-section">
+    <div class="text-box">
+      <h2>Wirtschaftssimulation</h2>
+      <p>Kaufe und verkaufe Waren, um dein Vermögen zu vermehren. 
+      Der Preis schwankt jede Runde – entscheide clever, wann du kaufst oder verkaufst!</p>
+    </div>
+    <div class="game-box">
+      <iframe src="wirtschaftssimulator.html"></iframe>
+    </div>
+  </div>
+
+  <!-- Zweites Spiel: Spiel links, Text rechts -->
+  <div class="game-section">
+	  <div class="text-box">
+		<h2>Tic Tac Toe</h2>
+		<p>Spiele Tic Tac Toe</p>
+	  </div>
+	  <div class="game-box">
+		<iframe src="Tic.html"></iframe>
+	  </div>
+	</div>
+
+</div>
+
 </body>
 </html>
