--- a/Playground.html
+++ b/Playground.html
@@ -15,7 +15,7 @@
     </a>
     <a href="index.html" class="site-name">Python Academy</a>
     <nav>
-      <a href="#home">Home</a>
+      <a href="ev.html">Home</a>
       <a href="Playground.html">Playground</a>
       <a href="#services">Leistungen</a>
       <a href="#contact">Kontakt</a>
@@ -38,7 +38,7 @@
       Der Preis schwankt jede Runde – entscheide clever, wann du kaufst oder verkaufst!</p>
     </div>
     <div class="game-box">
-      <iframe src="wirtschaftssimulator.html"></iframe>
+      <iframe src="wirtschaft.html"></iframe>
     </div>
   </div>
 
@@ -54,6 +54,19 @@
 	</div>
 
 </div>
+<script>
+const link = document.querySelector('nav a[href="ev.html"]');
+const passwort = "geheim";
 
+link.addEventListener("click", function(event) {
+    event.preventDefault();
+    const eingabe = prompt("Bitte Passwort eingeben:");
+    if(eingabe === passwort) {
+        window.location.href = link.href;
+    } else {
+        alert("Falsches Passwort");
+    }
+});
+</script>
 </body>
 </html>
