--- a/Programm.html
+++ b/Programm.html
@@ -19,7 +19,7 @@
         <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">Home</a>
         <div class="dropdown-menu" role="menu" aria-label="Home Unterseiten">
           <a href="ev.html" data-protected="true" role="menuitem">Veranstaltungen</a>
-          <a href="Programm.html" data-protected="true" role="menuitem">Programm</a>
+          <a href="intern.html" data-protected="true" role="menuitem">Interner Bereich</a>
         </div>
       </div>
       <a href="Playground.html">Playground</a>
@@ -28,11 +28,6 @@
     </nav>
   </div>
 </header>
-
-<main>
-  <h1>Willkommen auf meiner Website</h1>
-  <p>Hier kannst du deinen Inhalt einfügen.</p>
-</main>
 
 <script>
   const passwort = "geheim";
@@ -53,5 +48,7 @@
   });
 </script>
 
+<script async src="https://cse.google.com/cse.js?cx=37cfcbf41b7bc439c"></script>
+<div class="gcse-search"></div>
 </body>
 </html>
